# transformers-wasm

./: .gitignore  Cargo.toml  DEVELOPING.md  LICENSE  README.md  download-model.sh  package.json  pnpm-lock.yaml
.github/workflows/: rust.yml
src/: lib.rs  quantized_llama.rs  quantized_llama2.rs  quantized_mistral.rs  utils.rs
tests/: web.rs
tests/data/: test.json
