[package]
name = "transformers-wasm"
version = "0.1.0"
authors = ["Jan Schulte <jan.schulte@betalyra.pt>"]
edition = "2018"
license = "MIT"
description = "Wasm implementation of transformers based on Huggingface Candle"
keywords = ["llm","wasm","transformers"]
repository = "https://github.com/text-yoga/transformers-wasm"

[lib]
crate-type = ["cdylib", "rlib"]

[build]
rustflags = ["--cfg=web_sys_unstable_apis"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
candle = { version = "0.3.2", package = "candle-core"}
candle-nn = "0.3.2"
candle-transformers = "0.3.2"
tracing-wasm = "0.2.1"
web-time = "0.2.4"
tokenizers = { version = "0.15.0", features = ["unstable_wasm"], default-features = false }
serde = {version = "1.0.193", features = ["derive"]}
serde_json = "1.0.108"
js-sys = "0.3.64"
wasm-bindgen-futures = "0.4.39"
anyhow = "1.0"
gloo = "0.11.0"
byteorder = { version = "1", default-features = false }

[dependencies.web-sys]
features = [
  'console',
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
  'Navigator',
  'Gpu',
  'WgslLanguageFeatures'
]

version = "0.3.64"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
# opt-level = "z"
# lto = true
debug=true
